objects/Individual.object
<CustomObject>
    <fields>
        <fullName>contact_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to auto-check or manually check, when contact record is verified by Experian or IQVia</description>
        <label>Contact verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>credentials__c</fullName>
        <description>Contact&apos;s academic or professional credential e.g. M.D. or Ph.D.</description>
        <label>Credentials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crm_ranking__c</fullName>
        <label>CRM RANKING</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Target 1</fullName>
                </value>
                <value>
                    <fullName>Target 2</fullName>
                </value>
                <value>
                    <fullName>Target 3</fullName>
                </value>
                <value>
                    <fullName>Target 4</fullName>
                </value>
                <value>
                    <fullName>Unscored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>date_of_birth_search__c</fullName>
        <description>Field shows the Date of birth as a string field</description>
        <label>Date of Birth Search</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>Person email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>email_block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email Block</description>
        <label>Email Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <description>Fax number</description>
        <label>Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>graduation_year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>license__c</fullName>
        <label>License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mail_block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mailingcity_suggested__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailingcountry_suggested__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailingpostalcode_suggested__c</fullName>
        <label>Mailing ZIP/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailingstate_suggested__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailingstreet_suggested__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>medicare_id__c</fullName>
        <label>Medicare ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mmis__c</fullName>
        <description>Unique identifier provided by a third party data provider (e.g. IMS Health) used for matching record to their database.</description>
        <label>MMIS #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobile__c</fullName>
        <description>Mobile or secondary number</description>
        <label>Mobile</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npi__c</fullName>
        <description>National Provider Identifier (NPI) is a unique 10-digit identification number issued to health care providers in the United States by the Centers for Medicare and Medicaid Services (CMS).</description>
        <label>NPI #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <description>Phone number</description>
        <label>Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phone Block</description>
        <label>Phone Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>preferred_first_name__c</fullName>
        <description>Person Preferred First Name</description>
        <label>Preferred First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_specialty__c</fullName>
        <label>Primary Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation__c</fullName>
        <description>Prefix to name indicating honorific title or status</description>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>school_name__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>verification__c</fullName>
        <label>Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>